# vaga_linkedin

./: .bandit  .env.example  .flake8  .gitignore  DEVOPS_ARCHITECTURE.md  Dockerfile  GMAIL_SETUP.md  PRODUCAO_vs_DESENVOLVIMENTO.md  README.md  Readme.md  agent_chat.py  create_raw_tables.sql  databricks.yml  databricks_jobs_config.md  debug_click_capture.py  debug_complete_flow.py  debug_description_selectors.py  debug_indeed.py  debug_individual_pages.py  debug_job_detail_descriptions.py  debug_linkedin.py  debug_linkedin_dom.py  env_vars_after_cleanup.txt  extract_simple.py  kafka_real_time_alerts.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_extraction_only.py
.github/workflows/: auto-promote-to-prod.yml  ci-cd-pipeline.yml  ci.yml  dashboard-automation.yml  (+3 more)
app_production/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  agent_chat.py  agent_transform.py  deploy.sh  docker-compose.yml  main_production.py  requirements.txt
databricks_orchestration/: DATABRICKS_INTEGRATION.md  README.md  main.tf  providers.tf  terraform.tfvars.example  variables.tf
docs/: ARQUITETURA_CICD.md  CLOUD_RUN_JOBS.md  ESTRATEGIA_BRANCHES.md  FLUXO_CICD_EXPLICADO.md  IMPLEMENTACAO_COMPLETA.md  PROJECT_STRUCTURE.md  STATUS_MONITORAMENTO.md
monitoring/: README.md  databricks_monitor.py
scripts/: audit_databricks_schemas.py  check_agent_chat_status.py  check_silver_md_issue.py  cleanup_secrets.sh  extract_simple.py  test_gold_view.py
terraform/: DEPLOY_PERMISSIONS.md  README_DLT_JOBS.md  agent_chat.tf  databricks_dlt.tf  databricks_dlt_jobs.tf  databricks_files.tf  gcp_services.tf  main.tf  monitoring.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  conftest.py
vagas_linkedin/: README.md  databricks.yml  pyproject.toml
(+92 files in other folders)
